# Ethereum

./: .env  Cargo.toml
migrations/: 0001_init.sql
src/: main.rs
